codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__config_right_click_paste_unavailable.snap
---
source: tui/src/config_panel/config_panel_tests.rs
assertion_line: 290
expression: "render(&panel, 140)"
---

  Configuration
  Changes save automatically; some apply after restarting Codex.
  Settings in this group: 3.

   Appearance   Notifications   Input   Sessions   Text selection

  Copy on select           Auto · On ›          Copy transcript selections on release. Auto uses terminal defaults.
      Deselect after copy  [ ] Off              Remove the selection highlight after Copy on select succeeds.
› Right-click paste        On · Unavailable ›   Unavailable in inline mode. Use your terminal's paste command.





  left/right group · / search · enter edit setting · esc close
