codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__config_session_picker_layout_choice.snap
---
source: tui/src/config_panel/config_panel_tests.rs
expression: "render(&picker, 100)"
---
  Session picker layout
  Choose tighter rows or a roomier list when resuming and forking conversations.


› 1. Dense (current)
  2. Comfortable

  enter select · esc back
