codex-rs/tui/src/config_panel/snapshots/codex_tui__config_panel__tests__deselect_after_copy_unavailable.snap
---
source: tui/src/config_panel/config_panel_tests.rs
assertion_line: 96
expression: "render(&panel, 140)"
---

  Configuration
  Changes save automatically; some apply after restarting Codex.
  Settings in this group: 3.

   Appearance   Notifications   Input   Sessions   Text selection

  Search › deselect after copy

›     Deselect after copy  Unavailable          Turn on Copy on select to deselect after copying.







  left/right group · / search · enter edit setting · esc close
